--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style type="text/css">
-        h1{
+        h1 {
             text-align: center;
             font-size: 50px;
         }
     </style>
 </head>
 <body>
-    <h1>Hello Github</h1>   
+<h1>Hello Github This is my first page</h1>
 </body>
 </html>
